Front-End - Fix Extra Margin Under Rating & Checklist
Extra margin was added to the bottom of the <ul> elements used to contain options/ratings by Bootstrap.

--- a/Resources/public/css/survey.css
+++ b/Resources/public/css/survey.css
@@ -34,6 +34,7 @@ h1, h2 {
 
 .fanferret-checklist-options, .fanferret-rating-ratings {
 	list-style-type: none;
+	margin-bottom: 0;
 	padding-left: 0;
 }
 
